test/expected/explain_pmrgi.out
explain register int C::*x
                     ^
22: error: pointer to member not supported in C
